--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 		</div>
 		<h2>Press</h2>
 		<div class = "wrapper">
-			<img src = "nmai-logo.png" alt = "nmai-logo">
-			<img src = "times-logo.png" alt = "times-logo">
-			<img src = "sedona-logo.png" alt = "sedona-logo">
-			<img src = "bergdorf-logo.png" alt = "bergdorf-logo">
+			<img src = "images/nmai-logo.png" alt = "nmai-logo">
+			<img src = "images/times-logo.png" alt = "times-logo">
+			<img src = "images/sedona-logo.png" alt = "sedona-logo">
+			<img src = "images/bergdorf-logo.png" alt = "bergdorf-logo">
 		</div>
 		<footer>
 			<p>&copy; 2014 Zetsy, All Rights Reserved.</p>
