automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						retail stores of Bergdorf Goodman.</p>
 			</main>
 			<h2>Press</h2>
-				<img src = "images/nmai-logo.png" alt = "nmai-logo">
+				<img src = "images/nmai-logo.png" alt = "nmai-logo" href="http://nmai.si.edu">
 				<img src = "images/times-logo.png" alt = "times-logo">
 				<img src = "images/sedona-logo.png" alt = "sedona-logo">
 				<img src = "images/bergdorf-logo.png" alt = "bergdorf-logo">
