--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
 						retail stores of Bergdorf Goodman.</p>
 			</main>
 			<h2>Press</h2>
-				<img src = "images/nmai-logo.png" alt = "nmai-logo" href="http://nmai.si.edu">
-				<img src = "images/times-logo.png" alt = "times-logo">
-				<img src = "images/sedona-logo.png" alt = "sedona-logo">
-				<img src = "images/bergdorf-logo.png" alt = "bergdorf-logo">
+				<a href="http://nmai.si.edu">
+					<img src = "images/nmai-logo.png" alt = "nmai-logo"></a>
+				<a href = "http://www.nytimes.com/pages/t-magazine/">
+					<img src = "images/times-logo.png" alt = "times-logo"></a>
+				<a href = "ttp://www.sedonamonthly.com">
+					<img src = "images/sedona-logo.png" alt = "sedona-logo"></a>
+				<a href = "http://www.bergdorfgoodman.com/">
+					<img src = "images/bergdorf-logo.png" alt = "bergdorf-logo"></a>
 			<footer>
 				<p>&copy; 2014 Zetsy, All Rights Reserved.</p>
 			</footer>
