--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
 	</head>
 	<body>
-		<div class="wrapper">
+		<div class="wrapper clearfix">
 			<header>
 				<h1>Zetsy</h1>
 			</header>
@@ -44,6 +44,5 @@
 				<p>&copy; 2014 Zetsy, All Rights Reserved.</p>
 			</footer>
 		</div>
-
 	</body>
 </html>
